clusters/harmen-rpi-ssd/apps/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  type: ClusterIP
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
    - name: mqtt-ws
      port: 9001
      targetPort: mqtt-ws
      protocol: TCP
  selector:
    app: mosquitto
