clusters/harmen-rpi-ssd/apps/mosquitto/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-tcp
  namespace: mosquitto
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`mosquitto.home.lan`)
      services:
        - name: mosquitto
          port: 1883
  tls:
    passthrough: true
